# RayTracing_GPU

./: README  README.md
parallel_gpu_version/: CMakeLists.txt
parallel_gpu_version/include/: InfoIntersect.h  camera.h  color.h  cuda_utils.h  device_functions.h  lumiere_gpu.h  material_gpu.h  objet_gpu.h  point3d.h  ppm_writer.h  ray.h  scene_gpu.h  vecteur3d.h
parallel_gpu_version/src/: cuda_kernels.cu  cuda_utils.cu  device_functions.cu  main.cu  ppm_write.cpp  ppm_writer.cpp
photos/: desktop.ini
sequentiel/: CMakeLists.txt  output.ppm  raytracer
sequentiel/include/: InfoIntersect.h  PPMExporter.h  Triangle.h  camera.h  color.h  lumiere.h  material.h  objet.h  plane.h  point3d.h  ray.h  scene.h  sphere.h  vecteur3d.h
sequentiel/src/: main.cpp
